= RubyMotion 2.23 =

  * No longer query the (iOS Simulator) application for its window metrics when
    it is connected to a REPL but not the active application.
  * Improved the automatic selection of codesign certificates.
  * Removed backtrace symbolication when an application is sandboxed and print
    the command to allow the user to symbolicate themselves instead.
  * [iOS] Improved error reporting when specifying the rake `target' option
    with a version lower than the configured deployment target and when
    specifying `retina=false' when targeting iOS 7.
  * Fixed a bug with the `activate' CLI command. Thanks to Joffrey Jaffeux for
    the patch.
  * Added a feature to support Subscripting (Objective-C Literals).
  * Made the REPL for a OS X application work in development mode when it is
    sandboxed.
  * Fixed a regression with specifying external templates to `motion create'.
  * Fixed a bug which WeakRef.new would cause a crash when passed nil, true,
    false, Fixnum or Float object.
  * Fixed issue where `vendor_project' with `:static' did not reuse `:cflags'
    for the BridgeSupport generation.
  * Fixed issue where manually created BridgeSupport metadata files were no
    longer being used by the compiler. Now if one exists in the root of the lib
    dir, that will be used instead of one in the platform-specific build dir.
  * Add temporary files that are sometimes generated by the REPL to the default
    `gitignore' file. Thanks to Mark Rickert for the patch (pull request #150).
  * Added to support "value of def-expr" feature.
  * Fixed a bug which NSDate.distantFuture returns wrong value.
  * Fixed a memory leak where an exception message would be created.
  * Fixed a bug where cycle detector works in asynchronous Dispatch::Queue even
    if it set ARR_CYCLES_DISABLE.
  * Optimized where it would convert type implicit using #to_str etc.
  * Improved String#to_sym performance. ~40% faster.